NO-TICKET feat: support sms template deletion and conflict responses
